# aiocp

./: Cargo.toml  README.md
.github/workflows/: ci.yml  weekly.yml
aiocp-examples/: Cargo.toml
examples/: basic_overlapped_io.rs  named-pipe.rs  net.rs  pipe-example.rs  read-duplicate.rs  read-example.rs  read.rs  write-example.rs  write.rs
iocp-examples/: Cargo.toml
iocp-examples/src/: lib.rs
src/: arc_handle.rs  atomic_waker.rs  background.rs  buf.rs  completion_port.rs  errors.rs  ext.rs  flags.rs  handle.rs  io.rs  iocp_handle.rs  ioctl.rs  lib.rs  macros.rs  operation.rs  operation_poller.rs  ops.rs  overlapped.rs  overlapped_handle.rs  pipe.rs  pool.rs  socket.rs  task.rs  tokio.rs  write_ext.rs
src/handle/: ext.rs  operation.rs
src/io/: mod.rs  operation.rs  run.rs
src/io/tokio/: reader.rs  writer.rs
src/pool/: buffer_pool.rs  mod.rs  socket_pool.rs
src/socket/: ext.rs  operation.rs
src/sys/: doc.rs  sys.rs
src/tokio/: mod.rs  reader.rs  writer.rs
tests/: test_cancel.rs
