[package]
name = "async-iocp"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
resolver = "2"

[features] 
default = []
background = []

[dependencies]
parking_lot = "0.11.1"
futures = "0.3.15"
tokio = {version = "1.0", optional = true}
tracing = {version = "0.1.26", optional = true}

[dependencies.winapi]
version = "0.3.9"
features = [
    "winnt",
    "handleapi",
    "ioapiset",
    "minwinbase",
    "winerror",
    "namedpipeapi",
    "errhandlingapi",
]

[dev-dependencies]
tokio = {version = "1.0", features = ["full"]}
