[package]
name = "iocp"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.70"
description = "Simple and experimental asynchronous IOCP driver fow Windows."
documentation = "https://docs.rs/iocp"
readme = "README.md"
homepage = "https://github.com/udoprog/aiocp"
repository = "https://github.com/udoprog/aiocp"
license = "MIT OR Apache-2.0"
keywords = ["async", "iocp"]
categories = ["iocp"]
resolver = "2"

[features] 
default = ["background"]
background = []

[dependencies]
parking_lot = "0.12.1"
futures = "0.3.28"
tokio = "1.27"
tracing = { version = "0.1.37", optional = true }

[dependencies.winapi]
version = "0.3.9"
features = [
    "winnt",
    "handleapi",
    "ioapiset",
    "minwinbase",
    "winerror",
    "namedpipeapi",
    "errhandlingapi",
    "mswsock",
]

[dev-dependencies]
tokio = { version = "1.27", features = ["full"] }
iocp-examples = { path = "iocp-examples" }

[workspace]
members = ["iocp-examples"]
